# TeapotFortune

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
data/: .gitignore  NOTES.md  copypasta_sitemaps.lst  download_copypastas.py  parse_sitemaps.py
src/: main.rs
