[package]
name = "teapot_fortune"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
htmlescape = "0.3.1"
rand = "0.8.5"
sqlx = { version = "0.7.0", features = ["runtime-tokio", "sqlite"] }
